--- a/Lecture0.html
+++ b/Lecture0.html
@@ -19,7 +19,7 @@
                     font-size: 20px;
                     padding: 5px 0px;
                     margin: 10px;
-                    background-color: green;
+                    padding: 20px;
                     font-family: Arial, Helvetica, sans-serif;
                 }
             }
